com botoes para votar no tema do dia seguinte

--- a/inbattle/test/fixtures/microposts.yml
+++ b/inbattle/test/fixtures/microposts.yml
@@ -1,14 +1,7 @@
+# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  tema: "I just ate an orange"
-  endereco: "https://www.instagram.com/p/BGzpbzltb-c/?tagged=inbattle"
-  user_id: 1
   pontos: 1
-  created_at: <%= 10.minutes.ago %>
 
 two:
-  tema: "Check out the @tauday site by @mhartl: http://tauday.com"
-  endereco: "https://www.instagram.com/p/BGz0a_rtb_D/?tagged=inbattle"
-  user_id: 1
   pontos: 1
-  created_at: <%= Time.zone.now %>
