--- a/inbattle/test/fixtures/temas.yml
+++ b/inbattle/test/fixtures/temas.yml
@@ -1,9 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  tema: MyText
-  user_id: 
+  conteudo: MyString
+  : MyString
+  pontos: 1
+  user_id: 1
 
 two:
-  tema: MyText
-  user_id: 
+  conteudo: MyString
+  : MyString
+  pontos: 1
+  user_id: 1
